attempt to fix a bug with searchform overlapping

--- a/_sass/_simple-search.scss
+++ b/_sass/_simple-search.scss
@@ -7,7 +7,7 @@
   transition: all 200ms 100ms cubic-bezier(0, 0.6, 0.4, 1);
   top: 0;
   left: -200px;
-  z-index: 9002;
+  z-index: -1;
   .search-field {
     -webkit-appearance: none;
     border: none;
@@ -29,9 +29,11 @@
     opacity: 1;
     top: 0;
     left: 0;
+    z-index: 9002;
   }
   &.hidden {
     display: none;
+    z-index: -1;
   }
   ::-webkit-input-placeholder {
     @include font-size(32);
